finish the route setup by request type

--- a/JTSMS/JTSMS/Views/Admin/Route.cshtml
+++ b/JTSMS/JTSMS/Views/Admin/Route.cshtml
@@ -20,7 +20,7 @@
                     </div>
                     <div class="form-group col-md-2 pull-left">
                         <label class="text-center bold font-green-sharp" for="">Request Type</label>
-                        <select class="form-control" id="txt-route-search" data-search="route" name="route" style="color:mediumvioletred">
+                        <select class="form-control" id="txt-type-search" data-search="type" name="route" style="color:mediumvioletred">
                             <option value="">--Please Select--</option>
                             @foreach (var item in Type.OrderByDescending(c => c.TypeId).ToList())
                             {
@@ -40,59 +40,9 @@
     </div>
 
 
-    @*<table id="table" class="table table-bordered table-hover table-striped" style="margin: auto;width: 50% !important;">
-        <thead>
-            <tr class="text-center bold">
-                <td>Route Name</td>
-                <td>Status</td>
-                <td>Button</td>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr class="text-center">
-                <td>Submission 3</td>
-                <td> Active</td>
-                <td> <span class="up glyphicon glyphicon-chevron-up"></span> <span class="down glyphicon glyphicon-chevron-down"></span></td>
-            </tr>
-            <tr class="text-center">
-                <td>Submission 2</td>
-                <td> Active</td>
-                <td> <span class="up glyphicon glyphicon-chevron-up"></span> <span class="down glyphicon glyphicon-chevron-down"></span></td>
-            </tr>
-            <tr class="text-center">
-                <td>Submission 1</td>
-                <td> Active</td>
-                <td> <span class="up glyphicon glyphicon-chevron-up"></span> <span class="down glyphicon glyphicon-chevron-down"></span></td>
-            </tr>
-            <tr class="text-center">
-                <td>Submission 4</td>
-                <td> Active</td>
-                <td> <span class="up glyphicon glyphicon-chevron-up"></span> <span class="down glyphicon glyphicon-chevron-down"></span></td>
-            </tr>
-        </tbody>
-
-    </table>*@
 </div>
 @section Scripts{
     <script src="~/js/admin-route.js"></script>
-    <script src="~/js/test.js"></script>
-    @*<script type="text/javascript">
-        $('body').on('click', '.down', function () {
+    @*<script src="~/js/test.js"></script>*@
 
-            debugger
-            var thisRow = $(this).closest('tr');
-            var nextRow = thisRow.next();
-            if (nextRow.length) {
-                nextRow.after(thisRow);
-            }
-        });
-        $('body').on('click', '.up', function () {
-            var thisRow = $(this).closest('tr');
-            var prevRow = thisRow.prev();
-            if (prevRow.length) {
-                prevRow.before(thisRow);
-            }
-        });
-    </script>*@
 }
